[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "luna"
version = "0.2.0"
authors = [
    {name = "Great Scott Gadgets", email = "dev@greatscottgadgets.com"}
]
description = "Amaranth HDL framework for FPGA-based USB solutions"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "apollo-fpga>=0.0.5",
    "libusb1>1.9.2",
    "pyserial>=3.5",
    "pyusb>1.1.1",
    "pyvcd>=0.2.4",
    "amaranth~=0.4.0",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards.git@main",
    "usb-protocol @ git+https://github.com/usb-tools/python-usb-protocol",
]

[project.optional-dependencies]
dev = [
    "prompt-toolkit>3.0.16",
    "tox>3.22.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
